...
                        android:textSize="20sp"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </FrameLayout>
            <EditText
                android:id="@+id/tour_name_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="24dp"
                android:layout_marginStart="24dp"
                android:hint="Tour Name"
                android:inputType="text"
...
                    android:text="Share Tour"
                    android:textAllCaps="false"
                    android:textColor="@color/colorAccent"
                    android:textStyle="bold" />
                <!--android:onClick="shareTourFunction"-->
                <Button
                    android:id="@+id/tour_update_btn"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginEnd="24dp"
                    android:layout_weight=".33"
                    android:background="@color/colorPrimaryDark"
...
